infra/k8s/posts.old.yaml
#posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts

spec:
  containers:
    - name: posts
      image: raniasayed/posts:0.0.1
