infra/k8s/comments-depl.yaml
apiVersion: apps/v1 # the package that contained deployment
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: raniasayed/comments:latest
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP #default value for a service
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
