infra/k8s/moderation-depl.yaml
apiVersion: apps/v1 # the package that contained deployment
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: raniasayed/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: ClusterIP #default value for a service
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
