infra/k8s/query-depl.yaml
apiVersion: apps/v1 # the package that contained deployment
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: raniasayed/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: ClusterIP #default value for a service
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
